--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'TT Lakes';
-    src: url('css/font/TTLakes-Light.ttf');
+    src: url('font/TTLakes-Light.ttf');
     font-weight: 500;
 }
 
