--- a/css/main.css
+++ b/css/main.css
@@ -37,8 +37,8 @@
     padding: 0;
 }
 
-body {
-    
+html, body {
+    height: 100%;
     background: #F8F8F8;
     font-family: 'TT Lakes';
     font-size: 14px;
@@ -53,7 +53,7 @@ ul li {
 @media screen and (min-width: 320px) and (max-width: 767px) {
 
     /* Навигация */
-    .block-nav_ul {
+    .nav {
         height: 88px;
         background: #FFFFFF;  
         display: flex;
@@ -62,12 +62,19 @@ ul li {
         padding-left: 16px;
     }
 
-    .item {
+    .nav__item {
         margin-right: 16px;
     }
 
-    .right:last-child {
+    .nav__item--right:last-child {
         margin-left: auto;
+    }
+
+    .border {
+        min-width: 40px;
+        min-height: 40px;
+        background: #FF3E79;
+        border-radius: 50%;
     }
 
     .devider {
@@ -78,33 +85,9 @@ ul li {
         border-radius: 1px;
     }
 
-    .elem-border {
-        min-width: 40px;
-        min-height: 40px;
-        background: #FF3E79;
-        border-radius: 50%;
-    }
-
-    .burger  {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/burger.svg') ;
-    }
-
     .desktop, .not-mobial {
         visibility: hidden;
         display: none;
-    }
-
-    .repair-request { 
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/repair-request.svg');
-    }
-    .repair-status {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/repair-status.svg');
     }
 
     /* Основной блок */
@@ -218,22 +201,22 @@ ul li {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1119px)  {
-    /* Навигация */
 
-    .block-nav_ul {
-        height: 88px;
-        background: #FFFFFF;  
+    /* Навигация */
+    .nav {
         display: flex;
         justify-content:flex-start;
         align-items: center;
-        padding-left: 24px;
+        height: 88px;
+        background: #FFFFFF;  
+        padding-left: 16px;
     }
 
-    .item {
+    .nav__item {
         margin-right: 16px;
     }
 
-    .block-nav_ul .right {
+    .nav__item--right:last-child {
         margin-left: auto;
     }
 
@@ -244,50 +227,14 @@ ul li {
         border-radius: 1px;
     }
 
-    .elem-border {
+    .border {
         width: 40px;
         height: 40px;
         background: #FF3E79;
         border-radius: 50%;
     }
 
-    .burger  {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/burger.svg') ;
-    }
-
-    .call  {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/call.svg') ;
-    }
-    .chat  {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/chat.svg') ;
-    }
-
-    .profile  {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/profile.svg') ;
-    }
-
-    .repair-request { 
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/repair-request.svg');
-    }
-
-    .repair-status {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/repair-status.svg');
-    }
-
     /* Основной блок */
-
     .main-content {
         padding-left: 16px;
         padding-right: 24px;
@@ -315,7 +262,6 @@ ul li {
     }
 
     /* блок слайдер */
-
     .sliderMenu {
         display:flex;
         justify-content: space-between;
@@ -409,19 +355,37 @@ ul li {
 }
 
 @media (min-width: 1120px) {
+    /* Навигация */
+    .nav {
+        height: 88px;
+        background: #FFFFFF;  
+        display: flex;
+        justify-content:flex-start;
+        align-items: center;
+        padding-left: 16px;
+    }
+
+    .nav__item {
+        margin-right: 16px;
+    }
+
+    .nav__item--right:last-child {
+        margin-left: auto;
+    }
+
     .container {
         max-width: 1120px;
         margin: auto;
     }
     
-    .not-desktop {
+    .head__not-desktop {
         visibility: hidden;
         display: none;
     }
 
     .elem-x {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
         margin: auto;
     }
@@ -434,28 +398,16 @@ ul li {
         font-weight:500;
     }
 
-    .right:last-child {    
+    .right::last-child {    
         margin-left: auto;
     }
 
-    .elem-border {
+    .border {
         display: inline-flex;
         width: 40px;
         height: 40px;
         background: #FF3E79;
         border-radius: 50%;
-        margin-left: 8px;
-    }
-
-    .repair-request { 
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/repair-request.svg');
-    }
-    .repair-status {
-        background-repeat: no-repeat;
-        background-position: center;
-        background-image: url('img/repair-status.svg');
     }
 
     /* Основной блок */
@@ -578,4 +530,135 @@ ul li {
         height: 360px;
         border-radius: 2%
     }
+}
+
+.sidebar-nav {
+    width: 320px;
+    min-height: 100%;
+    background-color: #fff;
+    display: flex;
+	flex-direction: column;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.head {
+    flex: 1 0 auto;
+}
+
+.footer {
+    margin-top: 32px;
+    flex: 0 0 auto;
+    margin-bottom: 32px;
+}
+
+.sidebar {
+    padding-left: 24px;
+}
+
+.sidebar-menu__item {
+    position: relative;
+    font-size: 16px;
+    line-height: 24px;
+    padding-top: 32px;
+    color: #1B1C21;
+    font-weight:500;
+}
+
+.sidebar-menu__item-activ:before {
+    content: "";
+    position: absolute;
+    left: -24px;
+    width: 4px;
+    height: 32px;
+    background-color: #41f6d7;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    z-index: 10;
+}
+
+.border:hover {
+    opacity: 0.5;
+    width: 50px;
+    height: 50px;
+    border:#1B1C21 1px solid;
+    -webkit-transition: All 0.8s ease;
+    -moz-transition: All 0.8s ease;
+    -o-transition: All 0.8s ease;
+    -ms-transition: All 0.8s ease;
+    transition: All 0.8s ease;
+
+}
+
+.burger  {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/burger.svg') ;
+}
+
+.close { 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/close.svg');
+}
+
+.call  {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/call.svg');
+}
+.chat  {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/chat.svg');
+}
+
+.profile  {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/profile.svg');
+}
+
+.search { 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/search.svg');
+}
+
+.repair-status {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/repair-status.svg');
+}
+
+.repair-request { 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url('img/repair-request.svg');
+}
+
+.footer__nav  {
+    margin-right: 16px;
+}
+
+.email {
+    padding-top: 16px;
+    font-weight:500;
+}
+
+.phone {
+    padding-top: 12px;
+    font-size: 24px;
+    line-height: 32px;
+}
+
+.lang {
+    padding-top: 40px;
+    font-weight:500;
+}
+.lang span {
+    padding-right: 7px;
+}
+.lang--activ {
+    color: #7E7E82;
 }
