--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,11 @@ html, body {
     overflow-x: hidden;
 }
 
+body {
+    display:flex;
+    justify-content: space-around;
+}
+
 ul li {
     list-style-type: none;
 }
@@ -60,6 +65,10 @@ ul li {
         justify-content:flex-start;
         align-items: center;
         padding-left: 16px;
+    }
+
+    .container {
+        margin-left: auto;
     }
 
     .nav__item {
@@ -85,17 +94,12 @@ ul li {
         border-radius: 1px;
     }
 
-    .desktop, .not-mobial {
-        visibility: hidden;
-        display: none;
-    }
-
     /* Основной блок */
     .main-content {
         padding-left: 16px;
     }
 
-    .elem-title {
+    .main__title {
         position: relative;
         margin-top: 24px;
         color: #1B1C21;
@@ -104,7 +108,7 @@ ul li {
         
     }
 
-    .elem-title:before  {
+    .main__title:before  {
         content: "";
         position: absolute;
         left: -16px;
@@ -156,11 +160,11 @@ ul li {
     }
 
     /* Блок поста */
-    .main-post{
+    .main__post{
         margin-top: 24px;
     }
 
-    .expand {
+    .link--expand {
         position: relative;
         font-size: 16px;
         line-height: 24px;
@@ -168,7 +172,7 @@ ul li {
         font-weight:500;
     }
 
-    .expand:before {
+    .link--expand:before {
         content: "";
         position: absolute;
         width: 16px;
@@ -196,6 +200,45 @@ ul li {
         align-items:stretch;
         margin-top: 20px;
         margin-left: -16px;
+    }
+
+    .swiper-wrapper {
+        display: inline-flex;
+        padding-left: 16px;
+        padding-top: 16px;
+        margin-bottom: 32px;
+    }
+    
+    .swiper-slide {
+        position: relative;
+        padding: 16px 16px;
+        width: 200px;
+        height: 40px;
+        background: #FFFFFF;
+        border: 1px solid #EAEAEA;
+        border-radius: 6px;
+        margin-right: 24px;
+        display: flex;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+    }
+    
+    .swiper-slide::after {
+        content: "";
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        right: 16px;
+        z-index: 10;
+        background-repeat: no-repeat;
+        background-image: url('img/go.svg');
+    }
+
+    .desktop, .not-mobial {
+        visibility: hidden;
+        display: none;
     }
 
 }
@@ -240,7 +283,7 @@ ul li {
         padding-right: 24px;
     }
 
-    .elem-title {
+    .main__title {
         position: relative;
         margin-top: 24px;
         color: #1B1C21;
@@ -249,7 +292,7 @@ ul li {
         margin-top: 24px;
     }
 
-    .elem-title:before  {
+    .main__title:before  {
         content: "";
         position: absolute;
         left: -16px;
@@ -301,19 +344,14 @@ ul li {
     }
 
     /* Блок поста */
-    .desktop {
-        visibility: hidden;
-        display: none;
-    }
-
-    .main-post {
+    .main__post {
         display: flex;
         justify-content:space-between;
         align-items:flex-start;
         margin-top: 24px;
     }
 
-    .expand {
+    .link--expand {
         position: relative;
         font-size: 16px;
         line-height: 24px;
@@ -322,7 +360,7 @@ ul li {
         font-weight:500;
     }
 
-    .expand:before {
+    .link--expand:before {
         content: "";
         position: absolute;
         width: 16px;
@@ -352,9 +390,52 @@ ul li {
         align-items:stretch;
         border-radius: 2%
     }
+
+    .swiper-wrapper {
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        padding-left: 16px;
+        padding-top: 16px;
+        margin-bottom: 32px;
+    }
+    
+    .swiper-slide {
+        position: relative;
+        padding: 16px 16px;
+        width: 190px;
+        height: 40px;
+        background: #FFFFFF;
+        border: 1px solid #EAEAEA;
+        border-radius: 6px;
+        margin-right: 24px;
+        margin-bottom: 16px;
+
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+    
+    .swiper-slide::after {
+        content: "";
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        right: 16px;
+        z-index: 10;
+        background-repeat: no-repeat;
+        background-image: url('img/go.svg');
+    }
+
+    .desktop {
+        visibility: hidden;
+        display: none;
+    }
 }
 
-@media (min-width: 1120px) {
+@media (min-width: 1120px)  and (max-width: 1439px)  {
     /* Навигация */
     .nav {
         height: 88px;
@@ -375,15 +456,9 @@ ul li {
 
     .container {
         max-width: 1120px;
-        margin: auto;
+        margin-right: auto;
     }
-    
-    .head__not-desktop {
-        visibility: hidden;
-        display: none;
-    }
-
-    .elem-x {
+    .main {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -391,6 +466,7 @@ ul li {
     }
 
     .item {
+        position: relative;
         display: inline-flex;
         align-items: center;
         color: #1B1C21;
@@ -398,8 +474,30 @@ ul li {
         font-weight:500;
     }
 
+    .border__indent--right {margin-left: 8px;}
+
     .right::last-child {    
         margin-left: auto;
+    }
+
+    .right {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        color: #7E7E82;
+        padding-top: 24px;
+        padding-left: 32px;
+        font-weight:500;
+    }
+
+    .main-content h2 {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        color: #7E7E82;
+        padding-top: 24px;
+        padding-left: 32px;
+        font-weight:500;
     }
 
     .border {
@@ -416,7 +514,7 @@ ul li {
         margin-right: 24px;
     }
 
-    .elem-title {
+    .main__title {
         position: relative;
         margin-top: 24px;
         color: #1B1C21;
@@ -425,7 +523,7 @@ ul li {
         font-weight: 900;
     }
 
-    .elem-title:before  {
+    .main__title:before  {
         content: "";
         position: absolute;
         left: -16px;
@@ -476,24 +574,14 @@ ul li {
     }
 
     /* Блок поста */
-    .main-post {
+    .main__post {
         display: flex;
         justify-content:space-between;
         align-items:flex-start;
         margin-top: 24px;
     }
 
-    .desktop {
-        font-size: 16px;
-        line-height: 24px;
-        letter-spacing: -0.2px;
-        color: #7E7E82;
-        padding-top: 24px;
-        padding-left: 32px;
-        font-weight:500;
-    }
-
-    .expand {
+    .link--expand {
         position: relative;
         font-size: 16px;
         line-height: 24px;
@@ -503,7 +591,7 @@ ul li {
         font-weight:500;
     }
 
-    .expand:before {
+    .link--expand:before {
         content: "";
         position: absolute;
         width: 16px;
@@ -530,14 +618,289 @@ ul li {
         height: 360px;
         border-radius: 2%
     }
+
+    .swiper-wrapper {
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        padding-left: 16px;
+        padding-top: 16px;
+        margin-bottom: 32px;
+    }
+    
+    .swiper-slide {
+        position: relative;
+        padding: 16px 16px;
+        width: 190px;
+        height: 40px;
+        background: #FFFFFF;
+        border: 1px solid #EAEAEA;
+        border-radius: 6px;
+        margin-right: 24px;
+        margin-bottom: 16px;
+
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+    
+    .swiper-slide::after {
+        content: "";
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        right: 16px;
+        z-index: 10;
+        background-repeat: no-repeat;
+        background-image: url('img/go.svg');
+    }
+
+    .head__not-desktop, .display1120 {
+        visibility: hidden;
+        display: none;
+    }
+}
+
+@media (min-width: 1440px)  {
+
+    /* Навигация */
+    .nav {
+        height: 88px;
+        background: #FFFFFF;  
+        display: flex;
+        justify-content:flex-start;
+        align-items: center;
+        padding-left: 16px;
+    }
+
+    .nav__item {
+        margin-right: 16px;
+    }
+
+    .nav__item--right:last-child {
+        margin-left: auto;
+    }
+
+    .container {
+        max-width: 1120px;
+        margin-right: auto;
+    }
+
+    .main {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: auto;
+    }
+
+    .item {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        color: #1B1C21;
+        margin-left: 32px;
+        font-weight:500;
+    }
+
+    .border__indent--right {margin-left: 8px;}
+
+    .right::last-child {    
+        margin-left: auto;
+    }
+
+    .right {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        color: #7E7E82;
+        padding-top: 24px;
+        padding-left: 32px;
+        font-weight:500;
+    }
+
+    .main-content h2 {
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: -0.2px;
+        color: #7E7E82;
+        padding-top: 24px;
+        padding-left: 32px;
+        font-weight:500;
+    }
+
+    .border {
+        display: inline-flex;
+        width: 40px;
+        height: 40px;
+        background: #FF3E79;
+        border-radius: 50%;
+    }
+
+    /* Основной блок */
+    .main-content {
+        padding-left: 16px;
+        margin-right: 24px;
+    }
+
+    .main__title {
+        position: relative;
+        margin-top: 24px;
+        color: #1B1C21;
+        font-size: 28px;
+        line-height: 40px;
+        font-weight: 900;
+    }
+
+    .main__title:before  {
+        content: "";
+        position: absolute;
+        left: -16px;
+        width: 4px;
+        height: 100%;
+        background-color: #41f6d7;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+        z-index: 10;
+    }
+
+    /* блок слайдер */
+    .sliderMenu {
+        display:flex;
+        justify-content: space-between;
+        overflow:hidden;
+        overflow-x: scroll;
+        padding-top: 24px;
+        color: #7E7E82;
+    }
+
+    .sliderMenu::-webkit-scrollbar {
+        display: none;
+    }
+
+    .sliderItems {
+        display: flex;
+        justify-content:flex-start;
+        align-items: center;
+        font-size: 16px;
+        line-height: 24px;
+        white-space: nowrap;
+        height: 40px;
+        color: #7E7E82;
+        padding-right: 16px;
+    }
+
+    .sliderActiv {
+        padding-left: 16.54px;
+        padding-right: 9.3px;
+        margin-right: 16px;;
+        display: flex;
+        align-items:center;
+        box-sizing: border-box;
+        background: #FFFFFF;
+        border: 2px solid #B8FFEC;
+        border-radius: 6px;
+    }
+
+    /* Блок поста */
+    .main__post {
+        display: flex;
+        justify-content:space-between;
+        align-items:flex-start;
+        margin-top: 24px;
+    }
+
+    .link--expand {
+        position: relative;
+        font-size: 16px;
+        line-height: 24px;
+
+        padding-left: 32px;
+        color: #1B1C21;
+        font-weight:500;
+    }
+
+    .link--expand:before {
+        content: "";
+        position: absolute;
+        width: 16px;
+        height: 100%;
+        left: 12px;
+        z-index: 10;
+        background-repeat: no-repeat;
+        background-position: left;
+        background-image: url('img/expand.svg');
+    }
+
+    p {
+        min-width: 50%;
+        color: #1B1C21;
+        font-size: 14px;
+        line-height: 18px;
+        letter-spacing: 0.8px;
+        overflow: hidden;
+        padding-bottom: 13.78px;
+    }
+
+    .img-post {
+        width: 532px;
+        height: 360px;
+        border-radius: 2%
+    }
+
+    .swiper-wrapper {
+        display: flex;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+        padding-left: 16px;
+        padding-top: 16px;
+        margin-bottom: 32px;
+    }
+    
+    .swiper-slide {
+        position: relative;
+        padding: 16px 16px;
+        width: 190px;
+        height: 40px;
+        background: #FFFFFF;
+        border: 1px solid #EAEAEA;
+        border-radius: 6px;
+        margin-right: 24px;
+        margin-bottom: 16px;
+
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+    
+    .swiper-slide::after {
+        content: "";
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        right: 16px;
+        z-index: 10;
+        background-repeat: no-repeat;
+        background-image: url('img/go.svg');
+    }
+
+
+
+    .head__not-desktop {
+        visibility: hidden;
+        display: none;
+    }
 }
 
 .sidebar-nav {
     width: 320px;
-    min-height: 100%;
+    height: 100%;
     background-color: #fff;
     display: flex;
-	flex-direction: column;
+    flex-direction: column;
     font-size: 16px;
     line-height: 24px;
 }
@@ -661,4 +1024,28 @@ ul li {
 }
 .lang--activ {
     color: #7E7E82;
+}
+
+.slider--title {
+    position: relative;
+    padding: 16px 16px;
+    font-size: 16px;
+    line-height: 24px;
+    background: linear-gradient(270deg, #FFFFFF 0%, #F8F8F8 98.61%);
+    text-transform: uppercase;
+    color: #7E7E82;
+}
+.slider--title::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -16px;
+    width: 101.5%;
+    height: 1px;
+    background-color: #41f6d7;
+    z-index: 10;
+}
+
+.movie {
+    width: ;
 }
