--- a/css/main.css
+++ b/css/main.css
@@ -79,12 +79,12 @@ ul li {
         margin-left: auto;
     }
 
-    .border {
+    /*.border {
         min-width: 40px;
         min-height: 40px;
         background: #FF3E79;
         border-radius: 50%;
-    }
+    }*/
 
     .devider {
         width: 2px;
@@ -270,12 +270,12 @@ ul li {
         border-radius: 1px;
     }
 
-    .border {
+   /*.border {
         width: 40px;
         height: 40px;
         background: #FF3E79;
         border-radius: 50%;
-    }
+    }*/
 
     /* Основной блок */
     .main-content {
@@ -498,14 +498,6 @@ ul li {
         padding-top: 24px;
         padding-left: 32px;
         font-weight:500;
-    }
-
-    .border {
-        display: inline-flex;
-        width: 40px;
-        height: 40px;
-        background: #FF3E79;
-        border-radius: 50%;
     }
 
     /* Основной блок */
@@ -903,6 +895,7 @@ ul li {
     flex-direction: column;
     font-size: 16px;
     line-height: 24px;
+    margin-right: auto;
 }
 
 .head {
@@ -951,6 +944,14 @@ ul li {
     -ms-transition: All 0.8s ease;
     transition: All 0.8s ease;
 
+}
+
+.border {
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    background: #FF3E79;
+    border-radius: 50%;
 }
 
 .burger  {
