--- a/css/main.css
+++ b/css/main.css
@@ -47,8 +47,8 @@ html, body {
 }
 
 body {
-    display:flex;
-    justify-content: space-around;
+    /*display:flex;
+    justify-content: space-around;*/
 }
 
 ul li {
@@ -202,22 +202,36 @@ ul li {
         margin-left: -16px;
     }
 
+    .swiper {
+        width: 222px;
+        height: 72px;
+      }
+
     .swiper-wrapper {
         display: inline-flex;
-        padding-left: 16px;
+        padding-left: 32px;
         padding-top: 16px;
-        margin-bottom: 32px;
+        margin-bottom: 16px;
     }
+
+    :root{--swiper-pagination-color: #B5B6BC}
+    :root{--swiper-theme-color:#DDDDDD;}
+
+    
+.swiper-pagination{position:absolute;text-align:center;transition:.3s opacity;transform:translate3d(0,0,0);z-index:10}.swiper-pagination.swiper-pagination-hidden{opacity:0}.swiper-pagination-disabled>.swiper-pagination,.swiper-pagination.swiper-pagination-disabled{display:none!important}.swiper-horizontal>.swiper-pagination-bullets,.swiper-pagination-bullets.swiper-pagination-horizontal,.swiper-pagination-custom,.swiper-pagination-fraction{left:0;width:100%}.swiper-pagination-bullets-dynamic{overflow:hidden;font-size:0}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet{transform:scale(.33);position:relative}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active{transform:scale(1)}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-main{transform:scale(1)}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-prev{transform:scale(.66)}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-prev-prev{transform:scale(.33)}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-next{transform:scale(.66)}.swiper-pagination-bullets-dynamic .swiper-pagination-bullet-active-next-next{transform:scale(.33)}.swiper-pagination-bullet{width:12px;
+    height: 12px;display:inline-block;border-radius:50%;background:var(--swiper-pagination-bullet-inactive-color,#000);opacity:var(--swiper-pagination-bullet-inactive-opacity, .2)}button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-webkit-appearance:none;appearance:none}.swiper-pagination-clickable .swiper-pagination-bullet{cursor:pointer}.swiper-pagination-bullet:only-child{display:none!important}.swiper-pagination-bullet-active{opacity:var(--swiper-pagination-bullet-opacity, 1);background:var(--swiper-pagination-color,var(--swiper-theme-color))}.swiper-pagination-vertical.swiper-pagination-bullets,.swiper-vertical>.swiper-pagination-bullets{right:10px;top:50%;transform:translate3d(0px,-50%,0)}.swiper-pagination-vertical.swiper-pagination-bullets .swiper-pagination-bullet,.swiper-vertical>.swiper-pagination-bullets .swiper-pagination-bullet{margin:var(--swiper-pagination-bullet-vertical-gap,6px) 0;display:block}.swiper-pagination-vertical.swiper-pagination-bullets.swiper-pagination-bullets-dynamic,.swiper-vertical>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic{top:50%;transform:translateY(-50%);width:8px}.swiper-pagination-vertical.swiper-pagination-bullets.swiper-pagination-bullets-dynamic .swiper-pagination-bullet,.swiper-vertical>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic .swiper-pagination-bullet{display:inline-block;transition:.2s transform,.2s top}.swiper-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet,.swiper-pagination-horizontal.swiper-pagination-bullets .swiper-pagination-bullet{margin:0 var(--swiper-pagination-bullet-horizontal-gap,4px)}.swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic,.swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic{left:50%;transform:translateX(-50%);white-space:nowrap}.swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-bullets-dynamic .swiper-pagination-bullet,.swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic .swiper-pagination-bullet{transition:.2s transform,.2s left}.swiper-horizontal.swiper-rtl>.swiper-pagination-bullets-dynamic .swiper-pagination-bullet{transition:.2s transform,.2s right}.swiper-pagination-progressbar{background:rgba(0,0,0,.25);position:absolute}.swiper-pagination-progressbar .swiper-pagination-progressbar-fill{background:var(--swiper-pagination-color,var(--swiper-theme-color));position:absolute;left:0;top:0;width:100%;height:100%;transform:scale(0);transform-origin:left top}.swiper-rtl .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{transform-origin:right top}.swiper-horizontal>.swiper-pagination-progressbar,.swiper-pagination-progressbar.swiper-pagination-horizontal,.swiper-pagination-progressbar.swiper-pagination-vertical.swiper-pagination-progressbar-opposite,.swiper-vertical>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite{width:100%;height:4px;left:0;top:0}.swiper-horizontal>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite,.swiper-pagination-progressbar.swiper-pagination-horizontal.swiper-pagination-progressbar-opposite,.swiper-pagination-progressbar.swiper-pagination-vertical,.swiper-vertical>.swiper-pagination-progressbar{width:4px;height:100%;left:0;top:0}.swiper-pagination-lock{display:none}
+
+    
     
     .swiper-slide {
         position: relative;
         padding: 16px 16px;
-        width: 200px;
-        height: 40px;
+        max-width: 206px;
+        max-height: 54px;
         background: #FFFFFF;
         border: 1px solid #EAEAEA;
         border-radius: 6px;
-        margin-right: 24px;
+        margin: 0 0 0 -14px;
         display: flex;
             -webkit-box-align: center;
             -ms-flex-align: center;
@@ -236,11 +250,10 @@ ul li {
         background-image: url('img/go.svg');
     }
 
-    .desktop, .not-mobial {
+    .desktop, .not-mobial, .btn {
         visibility: hidden;
         display: none;
     }
-
 }
 
 @media screen and (min-width: 768px) and (max-width: 1119px)  {
@@ -432,6 +445,16 @@ ul li {
     .desktop {
         visibility: hidden;
         display: none;
+    }
+
+    .btn{
+        display: block;
+        position: relative;
+        left: 16px;
+    }
+
+    .swiper-wrapper--active{
+        max-height: 164px;
     }
 }
 
@@ -652,6 +675,16 @@ ul li {
     .head__not-desktop, .display1120 {
         visibility: hidden;
         display: none;
+    }
+
+    .swiper-wrapper--active{
+        max-height: 164px;
+    }
+
+    .btn{
+        display: block;
+        position: relative;
+        left: 16px;
     }
 }
 
@@ -880,11 +913,19 @@ ul li {
         background-image: url('img/go.svg');
     }
 
-
+    .swiper-wrapper--active{
+        max-height: 164px;
+    }
 
     .head__not-desktop {
         visibility: hidden;
         display: none;
+    }
+
+    .btn{
+        display: block;
+        position: relative;
+        left: 16px;
     }
 }
 
@@ -944,10 +985,10 @@ ul li {
 
 .border:hover {
     opacity: 0.5;
-    /*-webkit-transition: All 0.8s ease;
-    -moz-transition: All 0.8s ease;
-    -o-transition: All 0.8s ease;
-    -ms-transition: All 0.8s ease;*/
+    -webkit-transition: scale(1.25); 
+    -moz-transition: scale(1.25); 
+    -o-transition: scale(1.25); 
+    -ms-transition: scale(1.25); 
     transform: scale(1.25); 
     border: 1px solid #1B1C21;
     box-sizing: border-box;
@@ -1044,4 +1085,37 @@ ul li {
     height: 1px;
     background-color: #41f6d7;
     z-index: 10;
+    list-style: none;
 }
+
+    .btn::before{
+        display: block;
+        content: url("img/expand.svg");
+        position: absolute;
+        align-items: center;
+        height: 10.29px;
+        width: 7.41px;
+        top: 3px;
+        
+    }
+
+    .arrows.btn::before{
+        transform: rotate(180deg);
+        top: 5px;
+    }
+
+    .btn--text{
+        padding-left: 20px;
+        font-family: 'TT Lakes';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        /* identical to box height, or 150% */
+
+        letter-spacing: -0.2px;
+    }
+
+    .swiper-wrapper{
+        overflow: hidden;
+    }
