--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ ul li {
     }
 
 
-    .text__offer {
+    .text--offer {
         font-family: 'TT Lakes';
         font-size: 16px;
         line-height: 24px;
@@ -320,7 +320,7 @@ ul li {
         border-radius: 2%
     }
 
-    .text__offer {
+    .text--offer {
         font-family: 'TT Lakes';
         font-size: 16px;
         line-height: 24px;
@@ -541,7 +541,7 @@ ul li {
         display: none !important;
     }
 
-    .text__offer {
+    .text--offer {
         font-family: 'TT Lakes';
         font-size: 16px;
         line-height: 24px;
