--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("footer.css");
 @import url("modal.css");
 @import url("nav.css");
 @import url("swiper.css");
@@ -93,8 +94,12 @@ ul li {
     /* блок слайдер */
 
     .sliderMenu {
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        justify-content: space-between;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         overflow:hidden;
         overflow-x: scroll;
         margin-top: 24px;
@@ -106,9 +111,15 @@ ul li {
     }
 
     .sliderItems {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content:flex-start;
-        align-items: center;
+        -webkit-box-pack:start;
+            -ms-flex-pack:start;
+                justify-content:flex-start;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         font-size: 16px;
         line-height: 24px;
         white-space: nowrap;
@@ -121,9 +132,14 @@ ul li {
         padding-left: 16.54px;
         padding-right: 9.3px;
         margin-right: 16px;;
+        display: -webkit-box;;
+        display: -ms-flexbox;;
         display: flex;
-        align-items:center;
-        box-sizing: border-box;
+        -webkit-box-align:center;
+            -ms-flex-align:center;
+                align-items:center;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
         background: #FFFFFF;
         border: 2px solid #B8FFEC;
         border-radius: 6px;
@@ -132,9 +148,24 @@ ul li {
     /* Блок поста */
     .main-content__post {
         margin-top: 24px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column-reverse;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+            -ms-flex-direction: column-reverse;
+                flex-direction: column-reverse;
     }
+
+    .main-content__post > p:nth-of-type(1) {
+        order: 1;
+      }
+      .main-content__post > a:nth-of-type(2) {
+        order: 2;
+      }
+      .main-content__post > img:nth-of-type(3) {
+        order: 3;
+      }
 
     .link--expand {
         position: relative;
@@ -144,8 +175,7 @@ ul li {
         font-weight:500;
     }
 
-    p {
-        height: 90px;
+    .main-content__text {
         color: #1B1C21;
         font-size: 14px;
         line-height: 18px;
@@ -153,12 +183,13 @@ ul li {
         overflow: hidden;
     }
 
+    .main-content__height {
+        max-height: 90px;
+    }
+
     .img-post {
         width: 100%;
         height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items:stretch;
         margin-top: 20px;
         margin-left: -16px;
     }
@@ -181,7 +212,25 @@ ul li {
         position: relative;
     
         width: 192px;
-        margin-left: 16px;
+        margin-left: 24px;
+    }
+
+    .text {
+        margin-left: 24px;
+        font-family: 'TT Lakes';
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.2px;
+        color: #1B1C21;
+        width: 288px;
+        height: 138px;
+    }
+    
+    .text--offer span::after {
+        content: url('img/line.svg');
+        position: absolute;
+        right: -14px;
+        bottom: -2px;
     }
 
     .footer {
@@ -197,23 +246,11 @@ ul li {
         padding-top: 16px;
         padding-bottom: 19px;
     }
-
-    .footer__item {
-        padding-top: 16px;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: column;
-        margin-top: 47px;
-    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px)  {
-    /* Основной блок */
-
     .main-content {
-        padding-left: 16px;
+        padding-left: 24px;
         padding-right: 24px;
     }
 
@@ -234,7 +271,7 @@ ul li {
     .main__title:before  {
         content: "";
         position: absolute;
-        left: -16px;
+        left: -24px;
         width: 4px;
         height: 100%;
         background-color: #41f6d7;
@@ -245,8 +282,12 @@ ul li {
 
     /* блок слайдер */
     .sliderMenu {
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        justify-content: space-between;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         overflow:hidden;
         overflow-x: scroll;
         margin-top: 24px;
@@ -267,16 +308,25 @@ ul li {
         font-size: 16px;
         line-height: 24px;
 
+        display: -webkit-box;
+
+        display: -ms-flexbox;
+
         display: flex;
-        justify-content:flex-start;
-        align-items: center;
+        -webkit-box-pack:start;
+            -ms-flex-pack:start;
+                justify-content:flex-start;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         white-space: nowrap;
 
     }
 
     .sliderItems:hover {
         padding-left: 16px;
-        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
         background: #FFFFFF;
         border: 2px solid #B8FFEC;
         border-radius: 6px;
@@ -284,8 +334,7 @@ ul li {
 
     /* Блок поста */
     .main-content__post {
-        display: flex;
-        flex-direction: row-reverse;
+        display: flow-root;
         margin-top: 24px;
     }
 
@@ -299,8 +348,7 @@ ul li {
         display: block;
     }
 
-    p {
-        /*width: 312px;*/
+    .main-content__text {
         color: #1B1C21;
         font-size: 14px;
         line-height: 18px;
@@ -309,12 +357,13 @@ ul li {
         padding-bottom: 10px;
     }
 
+    .main-content__height {
+        height: 45px;
+    }
+
     .img-post {
         width: 360px;
         height: 260px;
-        /*display: flex;
-        justify-content: center;
-        align-items:stretch;*/
         float: right;
         padding-left: 5px;
         border-radius: 2%
@@ -335,33 +384,24 @@ ul li {
         margin-left: 24px;
     }
 
-    .footer {
-        border-top: 1px solid #41F6D7;
+   
 
+    .text {
+        margin-left: 24px;
         font-family: 'TT Lakes';
         font-size: 14px;
-        line-height: 16px;
-
-        color: #7E7E82;
-        mix-blend-mode: normal;
-        opacity: 0.72;
-
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        /*width: 100vw;*/
-        padding-left: 24px;
-        padding-top: 32px;
-        padding-right: 33px;
-        padding-bottom: 25px;
-
-        margin-top: 40px;
+        line-height: 20px;
+        letter-spacing: 0.2px;
+        color: #1B1C21;
+        width: 421px;
+        height: 60px;
     }
-
-    .footer__item {
-        width: 218px;
-        height: 48px;
-        white-space: break-word;
+    
+    .text--offer span::after {
+        content: url('img/line.svg');
+        position: absolute;
+        right: -14px;
+        bottom: -2px;
     }
     
     .desktop, .feedback {
@@ -373,7 +413,9 @@ ul li {
 @media (min-width: 1440px)  {
 
     body {
+        display:-ms-grid;
         display:grid;
+        -ms-grid-columns: 320px 1120px;
         grid-template-columns: 320px 1120px;
         /*justify-content: space-around;*/
     }
@@ -381,27 +423,42 @@ ul li {
     .container {
         /*max-width: 1120px;*/
         margin-right: auto;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         position:relative;
     }
 
     .container-wrapper {
         margin-top: 13.13px;
-        margin-left: -16px;
+        margin-left: -34px;
     }
 
     .main {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         margin: auto;
     }
 
     .item {
         position: relative;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
         display: inline-flex;
-        align-items: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         color: #1B1C21;
         margin-left: 32px;
         font-weight:500;
@@ -436,7 +493,7 @@ ul li {
 
     /* Основной блок */
     .main-content {
-        padding-left: 16px;
+        padding-left: 34px;
         margin-right: 24px;
     }
 
@@ -452,7 +509,7 @@ ul li {
     .main__title:before  {
         content: "";
         position: absolute;
-        left: -16px;
+        left: -34px;
         width: 4px;
         height: 100%;
         background-color: #41f6d7;
@@ -463,8 +520,12 @@ ul li {
 
     /* блок слайдер */
     .sliderMenu {
+        display:-webkit-box;
+        display:-ms-flexbox;
         display:flex;
-        justify-content: space-between;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         overflow:hidden;
         overflow-x: scroll;
         padding-top: 24px;
@@ -476,9 +537,15 @@ ul li {
     }
 
     .sliderItems {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content:flex-start;
-        align-items: center;
+        -webkit-box-pack:start;
+            -ms-flex-pack:start;
+                justify-content:flex-start;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         font-size: 16px;
         line-height: 24px;
         white-space: nowrap;
@@ -491,9 +558,14 @@ ul li {
         padding-left: 16.54px;
         padding-right: 9.3px;
         margin-right: 16px;;
+        display: -webkit-box;;
+        display: -ms-flexbox;;
         display: flex;
-        align-items:center;
-        box-sizing: border-box;
+        -webkit-box-align:center;
+            -ms-flex-align:center;
+                align-items:center;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
         background: #FFFFFF;
         border: 2px solid #B8FFEC;
         border-radius: 6px;
@@ -501,9 +573,12 @@ ul li {
 
     /* Блок поста */
     .main-content__post {
-        display: flex;
-        flex-direction: row-reverse;
         margin-top: 24px;
+        display: flow-root;
+    }
+
+    .main-content__post img {
+        margin-left: auto;
     }
 
     .link--expand {
@@ -518,14 +593,17 @@ ul li {
         margin-top: 24px;
     }
 
-    p {
-        /*min-width: 50%;*/
+    .main-content__text {
         color: #1B1C21;
         font-size: 14px;
         line-height: 18px;
         letter-spacing: 0.8px;
         overflow: hidden;
         padding-bottom: 13.78px;
+    }
+
+    .main-content__height {
+        height: 60px;
     }
 
     .img-post {
@@ -556,68 +634,61 @@ ul li {
         margin-left: 32px;
     }
 
-    .footer {
-        border-top: 1px solid #41F6D7;
+    .text {
+        margin-left: 32px;
         font-family: 'TT Lakes';
         font-size: 14px;
-        line-height: 16px;
-        color: #7E7E82;
-        mix-blend-mode: normal;
-        opacity: 0.72;
-        display: inline-flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        padding-left: 31px;
-        padding-top: 32px;
-        padding-right: 33px;
-        padding-bottom: 21px;
-
-        margin-top: 50px;
+        line-height: 20px;
+        letter-spacing: 0.2px;
+        color: #1B1C21;
+        width: 421px;
+        height: 60px;
+    }
+    
+    .text--offer span::after {
+        content: url('img/line.svg');
+        position: absolute;
+        right: -14px;
+        bottom: -2px;
     }
 }
 
-    .link--expand:before {
-        content: url('img/expand.svg');
-        position: absolute;
-        width: 16px;
-        height: 100%;
-        left: 12px;
-        z-index: 10;
-    }
 
-    .btn::before{
-        display: block;
-        content: url("img/expand.svg");
-        position: absolute;
-        align-items: center;
-        height: 10.29px;
-        width: 7.41px;
-        top: 3px;
-        
-    }
+.link--expand:before {
+    content: url('img/expand.svg');
+    position: absolute;
+    width: 16px;
+    height: 100%;
+    left: 12px;
+    z-index: 10;
+}
 
-    .arrows.btn::before{
-        transform: rotate(180deg);
-        top: 5px;
-    }
+.btn::before{
+    display: block;
+    content: url("img/expand.svg");
+    position: absolute;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 10.29px;
+    width: 7.41px;
+    top: 3px;
+    
+}
 
-    .btn--text{
-        padding-left: 20px;
-        font-family: 'TT Lakes';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 24px;
-        /* identical to box height, or 150% */
+.arrows.btn::before{
+    -webkit-transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+            transform: rotate(180deg);
+    top: 5px;
+}
 
-        letter-spacing: -0.2px;
-    }
-
-    .swiper-wrapper{
-        overflow: hidden;
-    }
-/*
-Подключаем файлы 
-*/
-
+.btn--text{
+    padding-left: 20px;
+    font-family: 'TT Lakes';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+}
