--- a/css/nav.css
+++ b/css/nav.css
@@ -1,282 +1,340 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
-     .nav {
-        height: 88px;
-        background: #FFFFFF;  
-        display: flex;
-        justify-content:flex-start;
-        align-items: center;
-        padding-left: 16px;
-    }
+    .nav {
+       height: 88px;
+       background: #FFFFFF;  
+       display: -webkit-box;  
+       display: -ms-flexbox;  
+       display: flex;
+       -webkit-box-pack:start;
+           -ms-flex-pack:start;
+               justify-content:flex-start;
+       -webkit-box-align: center;
+           -ms-flex-align: center;
+               align-items: center;
+       padding-left: 16px;
+   }
 
-    .nav__item {
-        margin-right: 16px;
-    }
+   .nav__item {
+       margin-right: 16px;
+   }
 
-    .nav__item--right:last-child {
-        margin-left: auto;
-    }
+   .nav__item--right:last-child {
+       margin-left: auto;
+   }
 
-    .devider {
-        display: inline-block;
-        width: 2px;
-        height: 32px;
-        background: #EAEAEA;
-        margin-top: 4px;
-        border-radius: 1px;
-    }
+   .devider {
+       display: inline-block;
+       width: 2px;
+       height: 32px;
+       background: #EAEAEA;
+       margin-top: 4px;
+       border-radius: 1px;
+   }
 
-    .sidebar-nav {
-        background-color: rgba(100%, 100%, 100%, 0.96);
-        display: flex;
-        flex-direction: column;
-        font-size: 16px;
-        line-height: 24px;
-        margin-right: auto;
-        position: absolute;
-        z-index: 15;
-    }
+   .sidebar-nav {
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: flex;
+       -webkit-box-orient: vertical;
+       -webkit-box-direction: normal;
+           -ms-flex-direction: column;
+               flex-direction: column;
+       font-size: 16px;
+       line-height: 24px;
+       margin-right: auto;
+       position: absolute;
+       z-index: 15;
+   }
 
-    .desktop {
-        transform: translate(-100%);
-        transition: 10s;
-    }
+   .desktop {
+       -webkit-transform: translate(-100%);
+           -ms-transform: translate(-100%);
+               transform: translate(-100%);
+       -webkit-transition: 10s;
+       -o-transition: 10s;
+       transition: 10s;
+   }
 
-    @media screen and (min-width: 320px) and (max-width: 359px) {
-        .nav-hide {
-            width: 320px;
-            height: 100%;
-            background-color: rgba(100%, 100%, 100%, 1) !important;
-            transform: translate(0px);
-        }
-    }
+   @media screen and (min-width: 320px) and (max-width: 359px) {
+       .nav-hide {
+           width: 100vw;
+           height: 91vh;
+           backdrop-filter: blur(5px);
+           -webkit-transform: translate(0px);
+               -ms-transform: translate(0px);
+                   transform: translate(0px);
+       }
+   }
 
-    @media screen and (min-width: 360px) and (max-width: 767px) {
-        .nav-hide {
-            width: 360px;
-            height: 100%;
-            background-color: rgba(100%, 100%, 100%, 1) !important;
-            transform: translate(0px);
-        }
-    }
+   @media screen and (min-width: 360px) and (max-width: 767px) {
+       .nav-hide {
+           width: 100vw;
+           height: 91vh;
+           backdrop-filter: blur(5px);
+           -webkit-transform: translate(0px);
+               -ms-transform: translate(0px);
+                   transform: translate(0px);
+       }
+   }
 
-    .footerNav {
-        margin-top: 32px;
-        margin-bottom: 32px;
-    }
+   .footerNav {
+       margin-top: 32px;
+       margin-bottom: 32px;
+   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1439px)  {
-     .header {
-        background-color: #FFFFFF;
-    }
+    .header {
+       background-color: #FFFFFF;
+   }
 
-    .nav {
-        display: flex;
-        justify-content:flex-start;
-        align-items: center;
-        height: 88px;
-        background: #FFFFFF;  
-        padding-left: 16px;
-    }
+   .nav {
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: flex;
+       -webkit-box-pack:start;
+           -ms-flex-pack:start;
+               justify-content:flex-start;
+       -webkit-box-align: center;
+           -ms-flex-align: center;
+               align-items: center;
+       height: 88px;
+       background: #FFFFFF;  
+       padding-left: 16px;
+   }
 
-    .nav__item {
-        margin-right: 16px;
-    }
+   .nav__item {
+       margin-right: 16px;
+   }
 
-    .nav__item--right:last-child {
-        margin-left: auto;
-    }
+   .nav__item--right:last-child {
+       margin-left: auto;
+   }
 
-    .devider {
-        display: inline-block;
-        width: 2px;
-        height: 32px;
-        background: #EAEAEA;
-        border-radius: 1px;
-    }
+   .devider {
+       display: inline-block;
+       width: 2px;
+       height: 32px;
+       background: #EAEAEA;
+       border-radius: 1px;
+   }
 
-    .sidebar-nav {
-        background-color: rgba(100%, 100%, 100%, 0.96);
-        display: flex;
-        flex-direction: column;
-        font-size: 16px;
-        line-height: 24px;
-        margin-right: auto;
-        position:absolute;
-        z-index: 15;
+   .sidebar-nav {
 
-        transform: translate(-100%);
-        transition: 1s;
-    }
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: flex;
+       -webkit-box-orient: vertical;
+       -webkit-box-direction: normal;
+           -ms-flex-direction: column;
+               flex-direction: column;
+       font-size: 16px;
+       line-height: 24px;
+       margin-right: auto;
+       position:absolute;
+       z-index: 15;
 
-    .nav-hide {
-        width: 320px;
-        height: 100%;
-        background-color: rgba(100%, 100%, 100%, 1) !important;
-        transform: translate(0px);
-    }
+       -webkit-transform: translate(-100%);
 
-    .footerNav {
-        margin-top: auto;
-        margin-bottom: 32px;
-    }
+           -ms-transform: translate(-100%);
+
+               transform: translate(-100%);
+       -webkit-transition: 1s;
+       -o-transition: 1s;
+       transition: 1s;
+   }
+
+   .nav-hide {
+       width: 100vw;
+       height: 91vh;
+       backdrop-filter: blur(5px);
+       -webkit-transform: translate(0px);
+           -ms-transform: translate(0px);
+               transform: translate(0px);
+   }
+
+   .footerNav {
+       margin-top: auto;
+       margin-bottom: 32px;
+   }
 }
 
 @media (min-width: 1440px)  {
-    .header {
-        width: 320px;
-        background-color:rgb(100%, 100%, 100%)
-    }
+   .header {
+       width: 320px;
+       background-color:rgb(100%, 100%, 100%)
+   }
 
-    .nav {
-        height: 88px;
-        background: #FFFFFF;  
-        display: flex;
-        justify-content:flex-start;
-        align-items: center;
-        padding-left: 16px;
-    }
+   .nav {
+       height: 88px;
+       background: #FFFFFF;  
+       display: -webkit-box;  
+       display: -ms-flexbox;  
+       display: flex;
+       -webkit-box-pack:start;
+           -ms-flex-pack:start;
+               justify-content:flex-start;
+       -webkit-box-align: center;
+           -ms-flex-align: center;
+               align-items: center;
+       padding-left: 16px;
+   }
 
-    .nav__item {
-        margin-right: 16px;
-    }
+   .nav__item {
+       margin-right: 16px;
+   }
 
-    .nav__item--right:last-child {
-        margin-left: auto;
-    }
+   .nav__item--right:last-child {
+       margin-left: auto;
+   }
 
-    .sidebar-nav {
-        width: 320px;
-        height: 92vh;
-        background-color: rgba(100%, 100%, 100%, 1) !important;
-        display: flex;
-        flex-direction: column;
-        font-size: 16px;
-        line-height: 24px;
-        margin-right: auto;
-    }
+   .sidebar-nav {
+       width: 320px;
+       height: 92vh;
+       background-color: rgba(100%, 100%, 100%, 1) !important;
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: flex;
+       -webkit-box-orient: vertical;
+       -webkit-box-direction: normal;
+           -ms-flex-direction: column;
+               flex-direction: column;
+       font-size: 16px;
+       line-height: 24px;
+       margin-right: auto;
+   }
 
-    .footerNav {
-        margin-top: auto;
-        margin-bottom: 32px;
-    }
+   .footerNav {
+       margin-top: auto;
+       margin-bottom: 32px;
+   }
 }
 
 .sidebar {
-    padding-left: 24px;
+   padding-left: 24px;
 }
 
 .sidebar-menu__item {
-    position: relative;
-    font-size: 16px;
-    line-height: 24px;
-    padding-top: 32px;
-    color: #1B1C21;
-    font-weight:500;
+   position: relative;
+   font-size: 16px;
+   line-height: 24px;
+   padding-top: 32px;
+   color: #1B1C21;
+   font-weight:500;
 }
 
 .sidebar-menu__item-activ:before {
-    content: "";
-    position: absolute;
-    left: -24px;
-    width: 4px;
-    height: 32px;
-    background-color: #41f6d7;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    z-index: 10;
+   content: "";
+   position: absolute;
+   left: -24px;
+   width: 4px;
+   height: 32px;
+   background-color: #41f6d7;
+   border-top-right-radius: 4px;
+   border-bottom-right-radius: 4px;
+   z-index: 10;
 }
 
 .border {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background: #FF3E79;
-    border-radius: 50%;
+   display: inline-block;
+   width: 40px;
+   height: 40px;
+   background: #FF3E79;
+   border-radius: 50%;
 }
 
 .border:hover {
-    opacity: 0.5;
-    -webkit-transition: scale(1.25); 
-    -moz-transition: scale(1.25); 
-    -o-transition: scale(1.25); 
-    -ms-transition: scale(1.25); 
-    transform: scale(1.25); 
-    border: 1px solid #1B1C21;
-    box-sizing: border-box;
+   opacity: 0.5;
+   -webkit-transition: scale(1.25); 
+   -moz-transition: scale(1.25); 
+   -o-transition: scale(1.25); 
+   -ms-transition: scale(1.25); 
+   -webkit-transform: scale(1.25); 
+       -ms-transform: scale(1.25); 
+           transform: scale(1.25); 
+   border: 1px solid #1B1C21;
+   -webkit-box-sizing: border-box;
+           box-sizing: border-box;
 }
 
 .burger  {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/burger.svg') ;
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/burger.svg') ;
 }
 
 .close { 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/close.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/close.svg');
 }
 
 .call  {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/call.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/call.svg');
 }
 .chat  {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/chat.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/chat.svg');
 }
 
 .profile  {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/profile.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/profile.svg');
 }
 
 .search { 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/search.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/search.svg');
 }
 
 .repair-status {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/repair-status.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/repair-status.svg');
 }
 
 .repair-request { 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-image: url('img/repair-request.svg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-image: url('img/repair-request.svg');
 }
 
 .footerNav__right {
-    margin-right: 16px;
+   margin-right: 16px;
 }
 
 .email {
-    padding-top: 16px;
-    font-weight:500;
+   padding-top: 16px;
+   font-weight:500;
 }
 
 .phone {
-    padding-top: 12px;
-    font-size: 24px;
-    line-height: 32px;
+   padding-top: 12px;
+   font-size: 24px;
+   line-height: 32px;
 }
 
 .lang {
-    padding-top: 40px;
-    font-weight:500;
+   padding-top: 40px;
+   font-weight:500;
 }
 
 .lang span {
-    padding-right: 7px;
+   padding-right: 7px;
 }
 
 .lang--activ {
-    color: #7E7E82;
+   color: #7E7E82;
+}
+
+.bluer {
+    width: 320px;
+    height: 98vh;
+    background-color: rgba(100%, 100%, 100%, 1);
+    display: grid;
 }
