--- a/css/nav.css
+++ b/css/nav.css
@@ -223,7 +223,7 @@
    font-weight:500;
 }
 
-.sidebar-menu__item-activ:before {
+.sidebar-menu__item:hover:before{
    content: "";
    position: absolute;
    left: -24px;
